# bot_telegram_wikimedia_commons

./: Cargo.toml  README.md  sonar-project.properties
.github/workflows/: ci.yml  release.yml
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build-lambda.sh  release.sh  set-webhook.sh  show-logs.sh  stats.sh  update-code.sh  upload-commons-cookie.sh
src/: app.rs  aws.rs  commons.rs  commons_cache.rs  config.rs  idempotency.rs  lib.rs  main.rs  models.rs  pagination.rs  parser.rs  preferences.rs  stats.rs  telegram.rs  wikidata.rs
tests/: integration_live_lambda.rs
tests/fixtures/: commons_category_search_minsk.json  commons_imageinfo_baschi.json
