[package]
name = "telegram-wikimedia-commons-bot"
version = "0.0.6"
edition = "2024"
license = "MIT"
description = "Telegram and CLI bot for searching and reading Wikimedia Commons media."
repository = "https://github.com/vitaly-zdanevich/bot_telegram_wikimedia_commons"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
html-escape = "0.2"
lambda_http = "1.2"
once_cell = "1"
quick-xml = "0.38"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "telegram-wikimedia-commons-bot"
path = "src/main.rs"

[[bin]]
name = "commons-cli"
path = "src/bin/commons-cli.rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
